--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "require-all": "0.0.x",
     "bunyan": "0.1.x",
     "moment": "x",
-    "jsdom": "0.8.x"
+    "jsdom": "0.8.x",
+    "mutil": "*"
   },
   "devDependencies": {
     "assert": "*",
