--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "config": "0.4.x",
     "yaml": "*",
     "request": "2.27.x",
-    "async": "https://api.github.com/repos/ibrokethat/async/tarball#v0.0.4",
-    "func": "https://api.github.com/repos/ibrokethat/func/tarball#v0.0.4",
-    "is": "https://api.github.com/repos/ibrokethat/is/tarball#v0.0.4",
-    "iter": "https://api.github.com/repos/ibrokethat/iter/tarball#v0.0.4",
-    "pipe": "https://api.github.com/repos/ibrokethat/pipe/tarball#v0.0.5",
-    "registry": "https://api.github.com/repos/ibrokethat/registry/tarball",
+    "super-async": "0.0.x",
+    "super-func": "0.0.x",
+    "super-is": "0.0.x",
+    "super-iter": "0.0.x",
+    "super-pipe": "0.0.x",
+    "super-registry": "0.0.x",
     "require-all": "0.0.x",
     "bunyan": "0.1.x",
     "moment": "x",
