reconfigured client routing to mimic backend api

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -6,4 +6,8 @@ apis:
   base: "/apis"
   components: "/components"
 files:
-  index: "index.html"
+  index: "/static/index.html"
+attributes:
+  base: "data-sp-"
+  component: "component"
+  componentType: "component-type"
