started on init app script

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "co-sleep": "0.0.x",
     "config": "0.4.x",
     "jsdom": "0.8.x",
-    "koa": "^0.12.1",
+    "koa": "0.12.x",
+    "koa-router": "x",
     "moment-timezone": "0.2.x",
     "pm2": "0.10.x",
     "require-all": "0.0.x",
