--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "co": "3.1.x",
     "co-defer": "0.1.x",
+    "co-fs": "1.2.x",
     "co-request": "0.2.x",
     "co-sleep": "0.0.x",
     "config": "0.4.x",
     "jsdom": "0.8.x",
     "koa": "0.12.x",
-    "koa-router": "x",
+    "koa-router": "3.4.x",
     "moment-timezone": "0.2.x",
     "pm2": "0.10.x",
     "require-all": "0.0.x",
