--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "author" : {
-    "Simon Jefford" : "si@ibrokethat.com"
+  "author": {
+    "Simon Jefford": "si@ibrokethat.com"
   },
   "name": "superposition",
   "description": "Executing code in more than one env at a time.",
@@ -14,6 +14,7 @@
     "co": "3.1.x",
     "co-defer": "0.1.x",
     "co-fs": "1.2.x",
+    "co-parallel": "1.0.x",
     "co-request": "0.2.x",
     "co-sleep": "0.0.x",
     "config": "0.4.x",
@@ -49,9 +50,12 @@
     "test-jenkins": "export NODE_ENV='test' && node --harmony --harmony_typeof ./node_modules/.bin/mocha --colors --harmony --harmony_typeof --recursive -R xunit --ui bdd ./test/**/*.js > test-reports.xml",
     "start": "node --harmony --harmony_typeof index.js"
   },
-  "config" : {
-    "blanket" : {
-      "pattern" : ["/apis", "/lib"]
+  "config": {
+    "blanket": {
+      "pattern": [
+        "/apis",
+        "/lib"
+      ]
     }
   }
 }
