building es6 into node compatible commonjs and es5 where necessary

--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "blanket": "1.1.x",
     "chai": "*",
     "esperanto": "^0.3.11",
+    "gulp": "^3.8.8",
+    "gulp-changed": "^1.0.0",
+    "gulp-esnext": "^1.2.0",
+    "gulp-esperanto": "^0.0.1",
+    "gulp-sourcemaps": "^1.2.2",
     "mocha": "*",
     "rewire": "2.0.x",
     "should": "*",
