--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "co": "3.1.x",
     "co-defer": "0.1.x",
     "co-fs": "1.2.x",
+    "co-glob": "0.0.2",
     "co-parallel": "1.0.x",
     "co-request": "0.2.x",
     "co-sleep": "0.0.x",
